# Final-Year-Project

./: .gitignore  FYP - Project Plan.docx  FYP Project Report.docx  FYP.docx  MockData.csv  README.md  app.py  app_database.db  pyproject.toml  requirements.txt  ~$P Project Report.docx
data/: CapAndActualData.csv  Module_base_data.csv  Module_pgta_hours.csv  capVsActualStudentsData.csv  jobDescriptionData.csv  moduleAssessmentData.csv  newModuleData.csv  requestedVsRecruitedData.csv  test.py
src/: PredictionCallback.py  TaDemandPredictionModel.py  app.py  app_database.db  capAndActualGraph.py  dataProcessing.py  demoGraph.py  moduleAssessmentGraph.py  requestedVsRecruitedGraph.py  variablesVsRecruitedGraph.py
src/assets/: style.css
src/data_processing/: dataProcessing.py  dataframeCleaning.py  statsLayout.py  test_dataProcessing.py
src/database/: database.py  databaseLayout.py  initDatabase.py  models.py
src/graphs/: demoGraph.py  dutiesVsPGTAHoursGraph.py  dutiesVsPgtaHoursGraph.py  requestedVsRecruitedGraph.py  variablesVsRecruitedGraph.py
src/ml_models/: modelTraining.py
src/model/: TaDemandPrediction.py
src/models/: GeneralisedAdditiveModel.py  TrainAndSaveModel.py  model.py  modelLoading.py  modelSaving.py  ridge_model.pkl
src/prediction_prompt/: predictionPrompt.py
src/prediction_prompts/: featureEngPrompt.py  gamPrompt.py  linearRegPrompt.py  nlpPrompt.py  ridgeRegPrompt.py  unifiedPrompt.py  vectoriserPrompt.py
tests/: dataProcessingTests.py  integrationTests.py  testDataProcessing.py  test_app_database.db  test_testDataProcessing.py
(+26 files in other folders)
