[build-system]
requires = ["python>=3.8"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "Final-Year-Project"
version = "0.1.0"
description = ""
authors = ["Andrew Lau"]

[tool.poetry.dependencies]
python = "^3.8"
dash = "^2.0.0"
streamlit = "^1.0.0"

[tool.poetry.dev-dependencies]
# Add any development dependencies here

[tool.poetry.scripts]
# Define your custom scripts here if needed

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
